--- a/Video/index.html
+++ b/Video/index.html
@@ -7,6 +7,7 @@
     <li><a href="https://www.youtube.com/watch?v=KxPPnxMip0A">Intro</a></li>
     <li><a href="https://www.youtube.com/watch?v=E4j0bEOXH5E">UserGuide</a></li> 
     <li><a href="https://youtu.be/oe3svICPq4I">Install Maintenance Guide</a></li> 
+    <li><a href="https://youtu.be/YHHwwBzfCDU">Shortcomings Wishlist</a></li> 
   </ul>
   
   <br>
