--- a/Video/index.html
+++ b/Video/index.html
@@ -5,17 +5,18 @@
   <h2>SkillCourt Index</h2>
   <ul>
     <li><a href="https://www.youtube.com/watch?v=KxPPnxMip0A">Intro</a></li>
-    <li><a href="https://www.youtube.com/watch?v=E4j0bEOXH5E">UserGuide</a></li> 
-    <li><a href="https://youtu.be/oe3svICPq4I">Install Maintenance Guide</a></li> 
-    <li><a href="https://youtu.be/YHHwwBzfCDU">Shortcomings Wishlist</a></li> 
+    <li><a href="https://www.youtube.com/watch?v=E4j0bEOXH5E">UserGuide</a></li>
+    <li><a href="https://youtu.be/oe3svICPq4I">Install Maintenance Guide</a></li>
+    <li><a href="https://youtu.be/YHHwwBzfCDU">Shortcomings Wishlist</a></li>
   </ul>
-  
+
   <br>
-  
+
   <h2>Individual Story Videos</h2>
   <ul>
     <li><a href="https://youtu.be/LU_KFtq-pYo">Carlos Alva SC1159 Refactor Pad Connection as a Service</a></li>
-  </ul>  
-  
+    <li><a href="https://youtu.be/I_Maaex6juk">Sergio Rosales SC1137 Change UI from Activities to Fragments</a></li>
+  </ul>
+
 </body>
 </html>
