Added individual link

--- a/Video/index.html
+++ b/Video/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li><a href="https://youtu.be/LU_KFtq-pYo">Carlos Alva SC1159 Refactor Pad Connection as a Service</a></li>
     <li><a href="https://youtu.be/I_Maaex6juk">Sergio Rosales SC1137 Change UI from Activities to Fragments</a></li>
+    <li><a href="https://youtu.be/Qvvv1roUJI4">Sandra Hurtado SC-1147:Implement and Refactor Sequence Class</a></li>
   </ul>
 
 </body>
